fixed label alignment of progress bar

--- a/de.jutzig.jabylon.vaadin.style/src/web/resources/VAADIN/themes/jabylon/styles.css
+++ b/de.jutzig.jabylon.vaadin.style/src/web/resources/VAADIN/themes/jabylon/styles.css
@@ -11,7 +11,7 @@
 }
 
 .jabylon-progress-label {
-	left: 45%;
+	text-align: center;
 	position: relative;
 	top: -18px;
 }
